--- a/webclient/src/components/Login/Login.css
+++ b/webclient/src/components/Login/Login.css
@@ -1,4 +1,3 @@
-
 .heading {
     margin-top: 1%;
     margin-bottom: 8vh;
@@ -12,18 +11,99 @@
 .image {
     text-align: left;
     margin-top: 5rem;
-    float: left;}
-  
-.loginPage{
+    float: left;
+}
+
+.loginPage {
     background-color: #a6E0fb;
     height: 100vh;
 }
-.forgot{
+
+.forgot {
     font-size: medium;
     margin: 1rem;
     text-align: center;
     text-emphasis: bold;
 }
-.forgotContainer{
+
+.forgotContainer {
     text-align: center;
+}
+
+body {
+    margin: 0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.content {
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.6);
+    /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 65%;
+    text-align: center;
+}
+
+.headerContent{
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.6);
+    /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 40%;
+    text-align: center;
+}
+
+.background-image {
+    background-image: url(../../assets/landingscreen.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: block;
+    filter: blur(15px);
+    -webkit-filter: blur(15px);
+    z-index: 1;
+    transform: scale(1.1);
+}
+
+.logo {
+    width: 35vw;
+}
+
+.btn-text {
+    font-weight: bold;
+}
+
+.background-wrapper {
+    overflow: hidden;
+}
+
+.landing-wrapper {
+    width: 100vw;
+    height: 100vh;
+}
+
+.link-wrapper {
+    text-decoration: inherit;
+}
+
+.landing-page-button:active {
+    transform: scale(0.98);
+}
+
+.landing-page-button:focus {
+    outline: none;
 }
